--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,13 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.GravityLeosMAD">
-
+        <activity android:name=".Sachini"></activity>
         <activity
             android:name=".Heshan"
             android:exported="true" />
-
-        <activity android:name=".navindu"></activity>
-
+        <activity android:name=".navindu" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
