--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.GravityLeosMAD">
-        <activity android:name=".Sachini"></activity>
+        <activity android:name=".senuri"></activity>
+        <activity android:name=".Sachini" />
         <activity
             android:name=".Heshan"
             android:exported="true" />
