--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,21 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
+    //Butter Knife
+    implementation 'com.jakewharton:butterknife:10.2.3'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.3'
+
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+
+    //Notification Badge
+    implementation 'com.nex3z:notification-badge:1.0.4'
+
+    //EventBus
+    implementation 'org.greenrobot:eventbus:3.2.0'
+
+    //material color
+    implementation 'com.google.android.material:material:1.3.0'
+
 }
